2011-??-??
Release of 2.0.2 source code, Win32 and DOS binaries.
+ Fix language errors in the documentation. Thanks to Csabo/LOD.
+ Remove bogus printout about the default decrunch effect when using a custom
  decrunch effect. Bug reported by Csabo/LOD.
+ Fix bug that prevented the correct error message from showing when trying to
  combine a basic start and a non rom config for the sfx command.  Bug reported
  by iAN CooG.
2011-02-06
Release of 2.0.1 source code, Win32 and DOS binaries.
+ Fix bug in log.c that caused the desfx command to loop if the log level was
  lower than debug. Bug report by iAN CooG.
2011-01-22
Release of 2.0 source code, Win32 and DOS binaries.
+ Fix bug in sfx decruncher setup where data was copied unnecessary. Triggered
  by using -Di_load_addr, reported by nbla000
+ Add i_line_number symbol to be able to change the default line number of the
  basic line of the sfx decruncher. Feature suggested by Chicken
+ 6502 emulator core now features memory read/write callbacks
+ Add desfx -e flag to override the automatic entry point detection, feature
  suggestion with patch by iAN CooG/HokutoForce. (Patch reworked somewhat,
  error handling added)
+ Fix desfx handling of files that decrunch to and including 0xffff, Bug report
  with patch by iAN CooG/HokutoForce. (Patch reworked somewhat, end addresses
  are exclusive everywhere else)
+ Fix argument handling of desfx, Bug report + patch by iAN CooG/HokutoForce.

2008-09-08
Release of 2.0beta7 source code, Win32 and DOS binaries.
+ Refactored some functions from exo_main.c and exo_helper.c into a new file,
  exo_util.c so the testprogram could use them too.
+ Fixed a bug in exo_main where the sys/call basic token was mixed up with
  the basic_txt_start. This confused thes sfx sys sub-command.
+ Fixed a bug in krilldecr.s. The handling of literal sequences longer than
  256 bytes was broken.
+ Added a testprogram to test that the decrunchers in the exodecrs folder